--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,20 @@
-
 allprojects {
-    apply plugin: "java"
-
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-
-    ext {
-        junitVersion = "5.3.2"
-    }
+    group 'org.netomi.sudoku'
+    version '1.0-SNAPSHOT'
 
     repositories {
         mavenCentral()
+        jcenter()
+    }
+}
+
+subprojects {
+    apply plugin: "java"
+
+    sourceCompatibility = 1.9
+    targetCompatibility = 1.9
+
+    ext {
+        junitVersion = "5.3.2"
     }
 }
