Add desktop module using tornadofx.

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ subprojects {
             }
         }
         jar.dependsOn compileModuleJava
+
+        compileKotlin.finalizedBy compileModuleJava
     }
 
     jar {
