Add library item to quickly access specific sudoku grid for certain solving techniques.

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -10,6 +10,17 @@ javafx {
 
 mainClassName = 'sudoku.desktop/org.netomi.sudoku.ui.SudokuApp'
 
+task copyResources {
+    copy {
+        from ('build/resources/main')
+        into 'build/classes/kotlin/main'
+    }
+}
+
+compileKotlin.doLast {
+    tasks.copyResources
+}
+
 jar {
     manifest {
         attributes 'Main-Class': mainClassName
