Fix relatedCells for fish and intersection finders, update build script to copy resources when compiling kotlin code.

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -14,14 +14,14 @@ task copyResources {
     copy {
         from 'build/resources/main'
         into 'build/classes/kotlin/main'
-
-        outputs.upToDateWhen { false }
     }
+
+    outputs.upToDateWhen { false }
 }
 
 copyResources.dependsOn(tasks.processResources)
 
-compileKotlin.dependsOn {
+compileKotlin.finalizedBy {
     tasks.copyResources
 }
 
