Update to current snapshot version of sudoku-solver, update groupId, add XY-Wing library entry.

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 allprojects {
-    group 'org.netomi.sudoku'
+    group 'com.github.netomi.sudoku'
     version '1.0-SNAPSHOT'
 
     repositories {
