--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 allprojects {
     group 'com.github.netomi.sudoku'
-    version '0.1'
+    version '0.2-SNAPSHOT'
 
     repositories {
         mavenCentral()
